[project]
name = "vt2it"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Violet Vivirand", email = "purpleslovemail@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "diffusers>=0.31.0",
    "torch>=2.5.1",
    "transformers>=4.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.30.0",
]
